# Smooth-Facial-Tracking

./: CMakeLists.txt  basic_face_detection.cpp  improved_face_detection.cpp  smoothFacialTracking_gui.cpp  smooth_face_tracking.cpp  smooth_face_tracking_gui.cpp  test.cpp
